--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
 [repository]
 # The name of the github organization / person owner, e.g. tauffer-consulting.
 # Must be in lower-case letters
-REGISTRY_NAME = "enter-your-registry-name-here"
+REGISTRY_NAME = "jasoncao"
 
 # The name of this Pieces repository
-REPOSITORY_NAME = "enter-your-repository-name-here"
-REPOSITORY_LABEL = "enter-your-repository-label-here"
+REPOSITORY_NAME = "domino_jason_fork"
+REPOSITORY_LABEL = "Domino Jason Fork"
 
 # The version of this Pieces release
 # Attention: changing this will create a new release
-VERSION = "0.1.0"
+VERSION = "1.3"
